cndi/cluster_manifests/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    kubernetes.io/tls-acme: 'true'
    external-dns.alpha.kubernetes.io/hostname: airflow.three-azure-create.coolnowdemoit.com
spec:
  ingressClassName: public
  tls:
    - hosts:
        - airflow.three-azure-create.coolnowdemoit.com
      secretName: cluster-issuer-private-key-airflow
  rules:
    - host: airflow.three-azure-create.coolnowdemoit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
