cndi/cluster_manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    kubernetes.io/tls-acme: 'true'
    external-dns.alpha.kubernetes.io/hostname: argocd.three-azure-create.coolnowdemoit.com
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: public
  tls:
    - hosts:
        - argocd.three-azure-create.coolnowdemoit.com
      secretName: cipk-argocd-argocd-ingress
  rules:
    - host: argocd.three-azure-create.coolnowdemoit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
