cndi/cluster_manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    kubernetes.io/tls-acme: 'true'
    external-dns.alpha.kubernetes.io/hostname: argocd.three-azure-create.coolnowdemoit.com
spec:
  ingressClassName: public
  tls:
    - hosts:
        - argocd.three-azure-create.coolnowdemoit.com
      secretName: cipk-observability-grafana-ingress
  rules:
    - host: argocd.three-azure-create.coolnowdemoit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
